--- a/index.css
+++ b/index.css
@@ -22,6 +22,15 @@ body {
 
 }
 
+.flex_center {
+
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: -20px;
+
+}
+
 .menu div {
 
     font-family: 'Pokemon Solid';
